# Autopilot_demo

./: LICENSE  README.md
catkin_ws/: record_start.sh  replay_start.sh  startup.sh
catkin_ws/data/: gps_20180328.bag
catkin_ws/src/: test.py
catkin_ws/src/control/dataspeed_can/: .hgtags  README.md
catkin_ws/src/control/dataspeed_can/.hg/: dirstate  hgrc  undo.desc
catkin_ws/src/control/dataspeed_can/dataspeed_can/: CHANGELOG.rst  package.xml
catkin_ws/src/control/dataspeed_can/dataspeed_can_msg_filters/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/control/dataspeed_can/dataspeed_can_msg_filters/include/dataspeed_can_msg_filters/: ApproximateTime.h
catkin_ws/src/control/dataspeed_can/dataspeed_can_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/control/dataspeed_can/dataspeed_can_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/control/dataspeed_can/dataspeed_can_tools/src/: CanExtractor.cpp  CanExtractor.h  dbc_bag.cpp  dbc_node.cpp
catkin_ws/src/control/dataspeed_can/dataspeed_can_usb/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/control/dbw_mkz_ros/: .hgignore  .hgtags  ROS_BAGS.md  ROS_SETUP.md  bitbucket-pipelines.yml
catkin_ws/src/control/dbw_mkz_ros/.hg/: dirstate  hgrc  undo.desc
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz/: CHANGELOG.rst  package.xml
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz/scripts/: ros_install.bash  sdk_install.bash
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_can/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_can/include/dbw_mkz_can/: ModuleVersion.h  dispatch.h  pedal_lut.h  sonar_lut.h
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_can/launch/: dbw.launch  offline.launch
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_can/scripts/: brake_sweep.py  brake_thrash.py  throttle_sweep.py  throttle_thrash.py
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_can/src/: DbwNode.cpp  DbwNode.h  node.cpp  nodelet.cpp
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_description/: CHANGELOG.rst  package.xml
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_joystick_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_joystick_demo/launch/: joystick_demo.launch
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_joystick_demo/src/: JoystickDemo.cpp  JoystickDemo.h  joystick_demo.cpp
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_msgs/: package.xml
catkin_ws/src/control/dbw_mkz_ros/dbw_mkz_twist_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/control/lusb/: .hgtags  CHANGELOG.rst  CMakeLists.txt  bitbucket-pipelines.yml  package.xml
catkin_ws/src/control/lusb/.hg/: dirstate  hgrc  undo.desc
catkin_ws/src/control/twist_controller/: dbw_node.py  pid.py  twist_controller.py
catkin_ws/src/control/twist_controller/launch/: dbw.launch
catkin_ws/src/control/waypoint_follower/docs/: README.md
catkin_ws/src/control/waypoint_follower/launch/: pure_pursuit.launch
catkin_ws/src/control/waypoint_follower/lib/: libwaypoint_follower.cpp
catkin_ws/src/control/waypoint_follower/src/: pure_pursuit.cpp  pure_pursuit_core.cpp
catkin_ws/src/driver/nmea_navsat_driver/: CMakeLists.txt  README.rst  package.xml
catkin_ws/src/driver/nmea_navsat_driver/launch/: gps_driver.launch  gps_driver.launch~  nmea_navsat.launch
catkin_ws/src/driver/nmea_navsat_driver/src/libnmea_navsat_driver/: driver.py  parser.py
catkin_ws/src/driver/usbcan_driver/: CMakeLists.txt  package.xml
catkin_ws/src/driver/usbcan_driver/src/: controlcan.h  test.c  test_node.c  usbcan_driver_node.c  usbcan_interface.c  usbcan_interface.h  usbcan_node.cpp  usbcan_receive_node.cpp  usbcan_send_node.cpp
catkin_ws/src/localization/gps_localization/: CMakeLists.txt  package.xml
catkin_ws/src/localization/gps_localization/launch/: robot_localization_4.launch
catkin_ws/src/localization/gps_localization/src/: gps_localization.cpp  gps_to_utm.h  nmea2tfpose_core.cpp  ros_filter_utilities.cpp
catkin_ws/src/localization/navsat_localization/: CMakeLists.txt  package.xml
catkin_ws/src/localization/navsat_localization/src/: navsat_localization.cpp
catkin_ws/src/localization/utm_localization/: CMakeLists.txt  package.xml
catkin_ws/src/localization/utm_localization/src/: gps2utm.cpp  nmea2tfpose_core.cpp  nmea2tfpose_core.h.autosave
catkin_ws/src/msg_convert/: CMakeLists.txt  package.xml
catkin_ws/src/msg_convert/msg/: global_pose.msg~  global_pose_vel.msg  vehicle_cmd.msg  vehicle_status.msg
catkin_ws/src/msg_convert/src/: pose_global_current.cpp  pose_heading (copy).cpp  pose_heading.cpp  pose_heading.py  pose_heading_vel.cpp  trajectory_convert.cpp  vechie_cmd_to_can_message.cpp
catkin_ws/src/planning/rtk_planning/: CMakeLists.txt  package.xml
catkin_ws/src/planning/rtk_planning/src/: rtk_record.cpp  (+1 more)
catkin_ws/src/system/mode_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/test/: README.md  package.xml
catkin_ws/src/test/src/: print.h
catkin_ws/src/test_dir/learning_tf2/: CMakeLists.txt  package.xml
catkin_ws/src/test_dir/test/: CMakeLists.txt
catkin_ws/src/tools/pid_package/: CMakeLists.txt  package.xml
doc/: control.txt  tracking.txt
docs/: Multi-modal_target_sensing.md  Vision_Target_Perception_Technology.md  curvature_calc.md  dbw_mkz_twist_controller.md  kf_pf_filter.md  kinematics_and_kinetic_model.md  localization.txt  localization_introdution.md  low_pass_filter.md  pure_pursuit.md  rviz.md  simulation_rviz.md  usbcan_readme.md
docs/control/: Curvature.md
docs/images/: twist_controller_node_arch.vsd  waypoint_follow_arch.vsd
docs/xmind/: autopilot_arch.xmind
(+368 files in other folders)
