<?xml version="1.0"?>
<package format="2">
  <name>dbw_mkz</name>
  <version>1.0.12</version>
  <description>
    Drive-by-wire interface to the Dataspeed Inc. Lincoln MKZ DBW kit
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_mkz_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_mkz_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dbw_mkz_can</exec_depend>
  <exec_depend>dbw_mkz_description</exec_depend>
  <exec_depend>dbw_mkz_joystick_demo</exec_depend>
  <exec_depend>dbw_mkz_msgs</exec_depend>
  <exec_depend>dbw_mkz_twist_controller</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
