<?xml version="1.0"?>
<package format="2">
  <name>dbw_mkz_can</name>
  <version>1.0.12</version>
  <description>
    Drive-by-wire interface to the Dataspeed Inc. Lincoln MKZ DBW kit
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_mkz_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_mkz_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>can_msgs</depend>
  <depend>dbw_mkz_msgs</depend>

  <build_depend>dataspeed_can_msg_filters</build_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>dataspeed_can_usb</exec_depend>
  <exec_depend>dbw_mkz_description</exec_depend>
  <exec_depend>dbw_mkz_twist_controller</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
